interpreter.output
Terminals unused in grammar

   PLUS_ASSIGN
   MINUS_ASSIGN
   ARRAY
   ARRAY_ITEM
   UNDEFINED


Gramática

    0 $accept: program $end

    1 program: stmtlist

    2 stmtlist: %empty
    3         | stmtlist stmt
    4         | stmtlist error

    5 stmt: SEMICOLON
    6     | asgn SEMICOLON
    7     | print SEMICOLON
    8     | read SEMICOLON
    9     | read_string SEMICOLON
   10     | print_string SEMICOLON
   11     | print_array SEMICOLON
   12     | if
   13     | while
   14     | for
   15     | repeat
   16     | block
   17     | type_of
   18     | clear_screen
   19     | place
   20     | style
   21     | switch
   22     | inc
   23     | create_array

   24 inc: VARIABLE INCREMENT
   25    | VARIABLE DECREMENT
   26    | INCREMENT VARIABLE
   27    | DECREMENT VARIABLE

   28 switch: SWITCH controlSymbol LPAREN exp RPAREN caselist END_SWITCH
   29       | SWITCH controlSymbol LPAREN exp RPAREN caselist defaultcase END_SWITCH

   30 caselist: %empty
   31         | caselist case

   32 case: CASE NUMBER TWO_DOTS stmtlist
   33     | CASE CONSTANT TWO_DOTS stmtlist
   34     | CASE STRING TWO_DOTS stmtlist

   35 defaultcase: DEFAULT TWO_DOTS stmtlist

   36 block: LETFCURLYBRACKET stmtlist RIGHTCURLYBRACKET

   37 controlSymbol: %empty

   38 if: IF controlSymbol cond THEN stmtlist END_IF
   39   | IF controlSymbol cond THEN stmtlist ELSE stmtlist END_IF

   40 while: WHILE controlSymbol cond DO stmtlist END_WHILE

   41 repeat: REPEAT controlSymbol stmtlist UNTIL cond SEMICOLON

   42 for: FOR controlSymbol VARIABLE SINCE exp UNTIL exp DO stmtlist END_FOR
   43    | FOR controlSymbol VARIABLE SINCE exp UNTIL exp STEP exp DO stmtlist END_FOR

   44 cond: LPAREN exp RPAREN

   45 asgn: VARIABLE ASSIGNMENT exp
   46     | VARIABLE ASSIGNMENT asgn
   47     | CONSTANT ASSIGNMENT exp
   48     | CONSTANT ASSIGNMENT asgn
   49     | VARIABLE LBRACKET NUMBER RBRACKET ASSIGNMENT exp
   50     | VARIABLE LBRACKET VARIABLE RBRACKET ASSIGNMENT exp

   51 print: PRINT exp

   52 print_string: PRINT_STRING exp

   53 print_array: PRINT_ARRAY LPAREN VARIABLE RPAREN
   54            | PRINT_ARRAY VARIABLE

   55 read: READ LPAREN VARIABLE RPAREN
   56     | READ LPAREN CONSTANT RPAREN

   57 read_string: READ_STRING LPAREN VARIABLE RPAREN
   58            | READ_STRING LPAREN CONSTANT RPAREN

   59 type_of: TYPE_OF LPAREN exp RPAREN

   60 clear_screen: CLEAR_SCREEN_TOKEN LPAREN RPAREN

   61 place: PLACE_TOKEN LPAREN exp COMMA exp RPAREN

   62 style: STYLE LPAREN exp RPAREN

   63 exp: NUMBER
   64    | STRING
   65    | BOOL
   66    | exp PLUS exp
   67    | exp MINUS exp
   68    | VARIABLE INCREMENT
   69    | VARIABLE DECREMENT
   70    | INCREMENT VARIABLE
   71    | DECREMENT VARIABLE
   72    | exp MULTIPLICATION exp
   73    | exp DIVISION exp
   74    | LPAREN exp RPAREN
   75    | PLUS exp
   76    | MINUS exp
   77    | exp MODULO exp
   78    | exp POWER exp
   79    | VARIABLE
   80    | CONSTANT
   81    | BUILTIN LPAREN listOfExp RPAREN
   82    | exp GREATER_THAN exp
   83    | exp GREATER_OR_EQUAL exp
   84    | exp LESS_THAN exp
   85    | exp LESS_OR_EQUAL exp
   86    | exp EQUAL exp
   87    | exp NOT_EQUAL exp
   88    | exp AND exp
   89    | exp OR exp
   90    | NOT exp
   91    | exp CONCATENATION exp
   92    | VARIABLE LBRACKET NUMBER RBRACKET
   93    | VARIABLE LBRACKET VARIABLE RBRACKET

   94 listOfExp: %empty
   95          | exp restOfListOfExp

   96 restOfListOfExp: %empty
   97                | COMMA exp restOfListOfExp

   98 create_array: VARIABLE ASSIGNMENT LBRACKET NUMBER RBRACKET
   99             | VARIABLE ASSIGNMENT LBRACKET VARIABLE RBRACKET


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 4
SEMICOLON (258) 5 6 7 8 9 10 11 41
PRINT (259) 51
PRINT_STRING (260) 52
PRINT_ARRAY (261) 53 54
READ (262) 55 56
READ_STRING (263) 57 58
IF (264) 38 39
ELSE (265) 39
THEN (266) 38 39
END_IF (267) 38 39
WHILE (268) 40
DO (269) 40 42 43
END_WHILE (270) 40
FOR (271) 42 43
SINCE (272) 42 43
UNTIL (273) 41 42 43
STEP (274) 43
END_FOR (275) 42 43
REPEAT (276) 41
TYPE_OF (277) 59
DEFAULT (278) 35
SWITCH (279) 28 29
CASE (280) 32 33 34
END_SWITCH (281) 28 29
STYLE (282) 62
CLEAR_SCREEN_TOKEN (283) 60
PLACE_TOKEN (284) 61
LETFCURLYBRACKET (285) 36
RIGHTCURLYBRACKET (286) 36
PLUS_ASSIGN (287)
MINUS_ASSIGN (288)
ASSIGNMENT (289) 45 46 47 48 49 50 98 99
COMMA (290) 61 97
TWO_DOTS (291) 32 33 34 35
NUMBER (292) 32 49 63 92 98
STRING (293) 34 64
ARRAY (294)
ARRAY_ITEM (295)
BOOL (296) 65
VARIABLE (297) 24 25 26 27 42 43 45 46 49 50 53 54 55 57 68 69 70 71
    79 92 93 98 99
UNDEFINED (298)
CONSTANT (299) 33 47 48 56 58 80
BUILTIN (300) 81
OR (301) 89
AND (302) 88
GREATER_OR_EQUAL (303) 83
LESS_OR_EQUAL (304) 85
GREATER_THAN (305) 82
LESS_THAN (306) 84
EQUAL (307) 86
NOT_EQUAL (308) 87
NOT (309) 90
PLUS (310) 66 75
MINUS (311) 67 76
CONCATENATION (312) 91
MULTIPLICATION (313) 72
DIVISION (314) 73
MODULO (315) 77
LPAREN (316) 28 29 44 53 55 56 57 58 59 60 61 62 74 81
RPAREN (317) 28 29 44 53 55 56 57 58 59 60 61 62 74 81
LBRACKET (318) 49 50 92 93 98 99
RBRACKET (319) 49 50 92 93 98 99
UNARY (320)
INCREMENT (321) 24 26 68 70
DECREMENT (322) 25 27 69 71
POWER (323) 78


No terminales con las reglas donde aparecen

$accept (69)
    en la izquierda: 0
program (70)
    en la izquierda: 1, en la derecha: 0
stmtlist (71)
    en la izquierda: 2 3 4, en la derecha: 1 3 4 32 33 34 35 36 38
    39 40 41 42 43
stmt (72)
    en la izquierda: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
    22 23, en la derecha: 3
inc (73)
    en la izquierda: 24 25 26 27, en la derecha: 22
switch (74)
    en la izquierda: 28 29, en la derecha: 21
caselist (75)
    en la izquierda: 30 31, en la derecha: 28 29 31
case (76)
    en la izquierda: 32 33 34, en la derecha: 31
defaultcase (77)
    en la izquierda: 35, en la derecha: 29
block (78)
    en la izquierda: 36, en la derecha: 16
controlSymbol (79)
    en la izquierda: 37, en la derecha: 28 29 38 39 40 41 42 43
if (80)
    en la izquierda: 38 39, en la derecha: 12
while (81)
    en la izquierda: 40, en la derecha: 13
repeat (82)
    en la izquierda: 41, en la derecha: 15
for (83)
    en la izquierda: 42 43, en la derecha: 14
cond (84)
    en la izquierda: 44, en la derecha: 38 39 40 41
asgn (85)
    en la izquierda: 45 46 47 48 49 50, en la derecha: 6 46 48
print (86)
    en la izquierda: 51, en la derecha: 7
print_string (87)
    en la izquierda: 52, en la derecha: 10
print_array (88)
    en la izquierda: 53 54, en la derecha: 11
read (89)
    en la izquierda: 55 56, en la derecha: 8
read_string (90)
    en la izquierda: 57 58, en la derecha: 9
type_of (91)
    en la izquierda: 59, en la derecha: 17
clear_screen (92)
    en la izquierda: 60, en la derecha: 18
place (93)
    en la izquierda: 61, en la derecha: 19
style (94)
    en la izquierda: 62, en la derecha: 20
exp (95)
    en la izquierda: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83 84 85 86 87 88 89 90 91 92 93, en la derecha: 28
    29 42 43 44 45 47 49 50 51 52 59 61 62 66 67 72 73 74 75 76 77
    78 82 83 84 85 86 87 88 89 90 91 95 97
listOfExp (96)
    en la izquierda: 94 95, en la derecha: 81
restOfListOfExp (97)
    en la izquierda: 96 97, en la derecha: 95 97
create_array (98)
    en la izquierda: 98 99, en la derecha: 23


State 0

    0 $accept: . program $end

    $default  reduce usando la regla 2 (stmtlist)

    program   ir al estado 1
    stmtlist  ir al estado 2


State 1

    0 $accept: program . $end

    $end  desplazar e ir al estado 3


State 2

    1 program: stmtlist .
    3 stmtlist: stmtlist . stmt
    4         | stmtlist . error

    error               desplazar e ir al estado 4
    SEMICOLON           desplazar e ir al estado 5
    PRINT               desplazar e ir al estado 6
    PRINT_STRING        desplazar e ir al estado 7
    PRINT_ARRAY         desplazar e ir al estado 8
    READ                desplazar e ir al estado 9
    READ_STRING         desplazar e ir al estado 10
    IF                  desplazar e ir al estado 11
    WHILE               desplazar e ir al estado 12
    FOR                 desplazar e ir al estado 13
    REPEAT              desplazar e ir al estado 14
    TYPE_OF             desplazar e ir al estado 15
    SWITCH              desplazar e ir al estado 16
    STYLE               desplazar e ir al estado 17
    CLEAR_SCREEN_TOKEN  desplazar e ir al estado 18
    PLACE_TOKEN         desplazar e ir al estado 19
    LETFCURLYBRACKET    desplazar e ir al estado 20
    VARIABLE            desplazar e ir al estado 21
    CONSTANT            desplazar e ir al estado 22
    INCREMENT           desplazar e ir al estado 23
    DECREMENT           desplazar e ir al estado 24

    $end  reduce usando la regla 1 (program)

    stmt          ir al estado 25
    inc           ir al estado 26
    switch        ir al estado 27
    block         ir al estado 28
    if            ir al estado 29
    while         ir al estado 30
    repeat        ir al estado 31
    for           ir al estado 32
    asgn          ir al estado 33
    print         ir al estado 34
    print_string  ir al estado 35
    print_array   ir al estado 36
    read          ir al estado 37
    read_string   ir al estado 38
    type_of       ir al estado 39
    clear_screen  ir al estado 40
    place         ir al estado 41
    style         ir al estado 42
    create_array  ir al estado 43


State 3

    0 $accept: program $end .

    $default  aceptar


State 4

    4 stmtlist: stmtlist error .

    $default  reduce usando la regla 4 (stmtlist)


State 5

    5 stmt: SEMICOLON .

    $default  reduce usando la regla 5 (stmt)


State 6

   51 print: PRINT . exp

    NUMBER     desplazar e ir al estado 44
    STRING     desplazar e ir al estado 45
    BOOL       desplazar e ir al estado 46
    VARIABLE   desplazar e ir al estado 47
    CONSTANT   desplazar e ir al estado 48
    BUILTIN    desplazar e ir al estado 49
    NOT        desplazar e ir al estado 50
    PLUS       desplazar e ir al estado 51
    MINUS      desplazar e ir al estado 52
    LPAREN     desplazar e ir al estado 53
    INCREMENT  desplazar e ir al estado 54
    DECREMENT  desplazar e ir al estado 55

    exp  ir al estado 56


State 7

   52 print_string: PRINT_STRING . exp

    NUMBER     desplazar e ir al estado 44
    STRING     desplazar e ir al estado 45
    BOOL       desplazar e ir al estado 46
    VARIABLE   desplazar e ir al estado 47
    CONSTANT   desplazar e ir al estado 48
    BUILTIN    desplazar e ir al estado 49
    NOT        desplazar e ir al estado 50
    PLUS       desplazar e ir al estado 51
    MINUS      desplazar e ir al estado 52
    LPAREN     desplazar e ir al estado 53
    INCREMENT  desplazar e ir al estado 54
    DECREMENT  desplazar e ir al estado 55

    exp  ir al estado 57


State 8

   53 print_array: PRINT_ARRAY . LPAREN VARIABLE RPAREN
   54            | PRINT_ARRAY . VARIABLE

    VARIABLE  desplazar e ir al estado 58
    LPAREN    desplazar e ir al estado 59


State 9

   55 read: READ . LPAREN VARIABLE RPAREN
   56     | READ . LPAREN CONSTANT RPAREN

    LPAREN  desplazar e ir al estado 60


State 10

   57 read_string: READ_STRING . LPAREN VARIABLE RPAREN
   58            | READ_STRING . LPAREN CONSTANT RPAREN

    LPAREN  desplazar e ir al estado 61


State 11

   38 if: IF . controlSymbol cond THEN stmtlist END_IF
   39   | IF . controlSymbol cond THEN stmtlist ELSE stmtlist END_IF

    $default  reduce usando la regla 37 (controlSymbol)

    controlSymbol  ir al estado 62


State 12

   40 while: WHILE . controlSymbol cond DO stmtlist END_WHILE

    $default  reduce usando la regla 37 (controlSymbol)

    controlSymbol  ir al estado 63


State 13

   42 for: FOR . controlSymbol VARIABLE SINCE exp UNTIL exp DO stmtlist END_FOR
   43    | FOR . controlSymbol VARIABLE SINCE exp UNTIL exp STEP exp DO stmtlist END_FOR

    $default  reduce usando la regla 37 (controlSymbol)

    controlSymbol  ir al estado 64


State 14

   41 repeat: REPEAT . controlSymbol stmtlist UNTIL cond SEMICOLON

    $default  reduce usando la regla 37 (controlSymbol)

    controlSymbol  ir al estado 65


State 15

   59 type_of: TYPE_OF . LPAREN exp RPAREN

    LPAREN  desplazar e ir al estado 66


State 16

   28 switch: SWITCH . controlSymbol LPAREN exp RPAREN caselist END_SWITCH
   29       | SWITCH . controlSymbol LPAREN exp RPAREN caselist defaultcase END_SWITCH

    $default  reduce usando la regla 37 (controlSymbol)

    controlSymbol  ir al estado 67


State 17

   62 style: STYLE . LPAREN exp RPAREN

    LPAREN  desplazar e ir al estado 68


State 18

   60 clear_screen: CLEAR_SCREEN_TOKEN . LPAREN RPAREN

    LPAREN  desplazar e ir al estado 69


State 19

   61 place: PLACE_TOKEN . LPAREN exp COMMA exp RPAREN

    LPAREN  desplazar e ir al estado 70


State 20

   36 block: LETFCURLYBRACKET . stmtlist RIGHTCURLYBRACKET

    $default  reduce usando la regla 2 (stmtlist)

    stmtlist  ir al estado 71


State 21

   24 inc: VARIABLE . INCREMENT
   25    | VARIABLE . DECREMENT
   45 asgn: VARIABLE . ASSIGNMENT exp
   46     | VARIABLE . ASSIGNMENT asgn
   49     | VARIABLE . LBRACKET NUMBER RBRACKET ASSIGNMENT exp
   50     | VARIABLE . LBRACKET VARIABLE RBRACKET ASSIGNMENT exp
   98 create_array: VARIABLE . ASSIGNMENT LBRACKET NUMBER RBRACKET
   99             | VARIABLE . ASSIGNMENT LBRACKET VARIABLE RBRACKET

    ASSIGNMENT  desplazar e ir al estado 72
    LBRACKET    desplazar e ir al estado 73
    INCREMENT   desplazar e ir al estado 74
    DECREMENT   desplazar e ir al estado 75


State 22

   47 asgn: CONSTANT . ASSIGNMENT exp
   48     | CONSTANT . ASSIGNMENT asgn

    ASSIGNMENT  desplazar e ir al estado 76


State 23

   26 inc: INCREMENT . VARIABLE

    VARIABLE  desplazar e ir al estado 77


State 24

   27 inc: DECREMENT . VARIABLE

    VARIABLE  desplazar e ir al estado 78


State 25

    3 stmtlist: stmtlist stmt .

    $default  reduce usando la regla 3 (stmtlist)


State 26

   22 stmt: inc .

    $default  reduce usando la regla 22 (stmt)


State 27

   21 stmt: switch .

    $default  reduce usando la regla 21 (stmt)


State 28

   16 stmt: block .

    $default  reduce usando la regla 16 (stmt)


State 29

   12 stmt: if .

    $default  reduce usando la regla 12 (stmt)


State 30

   13 stmt: while .

    $default  reduce usando la regla 13 (stmt)


State 31

   15 stmt: repeat .

    $default  reduce usando la regla 15 (stmt)


State 32

   14 stmt: for .

    $default  reduce usando la regla 14 (stmt)


State 33

    6 stmt: asgn . SEMICOLON

    SEMICOLON  desplazar e ir al estado 79


State 34

    7 stmt: print . SEMICOLON

    SEMICOLON  desplazar e ir al estado 80


State 35

   10 stmt: print_string . SEMICOLON

    SEMICOLON  desplazar e ir al estado 81


State 36

   11 stmt: print_array . SEMICOLON

    SEMICOLON  desplazar e ir al estado 82


State 37

    8 stmt: read . SEMICOLON

    SEMICOLON  desplazar e ir al estado 83


State 38

    9 stmt: read_string . SEMICOLON

    SEMICOLON  desplazar e ir al estado 84


State 39

   17 stmt: type_of .

    $default  reduce usando la regla 17 (stmt)


State 40

   18 stmt: clear_screen .

    $default  reduce usando la regla 18 (stmt)


State 41

   19 stmt: place .

    $default  reduce usando la regla 19 (stmt)


State 42

   20 stmt: style .

    $default  reduce usando la regla 20 (stmt)


State 43

   23 stmt: create_array .

    $default  reduce usando la regla 23 (stmt)


State 44

   63 exp: NUMBER .

    $default  reduce usando la regla 63 (exp)


State 45

   64 exp: STRING .

    $default  reduce usando la regla 64 (exp)


State 46

   65 exp: BOOL .

    $default  reduce usando la regla 65 (exp)


State 47

   68 exp: VARIABLE . INCREMENT
   69    | VARIABLE . DECREMENT
   79    | VARIABLE .
   92    | VARIABLE . LBRACKET NUMBER RBRACKET
   93    | VARIABLE . LBRACKET VARIABLE RBRACKET

    LBRACKET   desplazar e ir al estado 85
    INCREMENT  desplazar e ir al estado 86
    DECREMENT  desplazar e ir al estado 87

    $default  reduce usando la regla 79 (exp)


State 48

   80 exp: CONSTANT .

    $default  reduce usando la regla 80 (exp)


State 49

   81 exp: BUILTIN . LPAREN listOfExp RPAREN

    LPAREN  desplazar e ir al estado 88


State 50

   90 exp: NOT . exp

    NUMBER     desplazar e ir al estado 44
    STRING     desplazar e ir al estado 45
    BOOL       desplazar e ir al estado 46
    VARIABLE   desplazar e ir al estado 47
    CONSTANT   desplazar e ir al estado 48
    BUILTIN    desplazar e ir al estado 49
    NOT        desplazar e ir al estado 50
    PLUS       desplazar e ir al estado 51
    MINUS      desplazar e ir al estado 52
    LPAREN     desplazar e ir al estado 53
    INCREMENT  desplazar e ir al estado 54
    DECREMENT  desplazar e ir al estado 55

    exp  ir al estado 89


State 51

   75 exp: PLUS . exp

    NUMBER     desplazar e ir al estado 44
    STRING     desplazar e ir al estado 45
    BOOL       desplazar e ir al estado 46
    VARIABLE   desplazar e ir al estado 47
    CONSTANT   desplazar e ir al estado 48
    BUILTIN    desplazar e ir al estado 49
    NOT        desplazar e ir al estado 50
    PLUS       desplazar e ir al estado 51
    MINUS      desplazar e ir al estado 52
    LPAREN     desplazar e ir al estado 53
    INCREMENT  desplazar e ir al estado 54
    DECREMENT  desplazar e ir al estado 55

    exp  ir al estado 90


State 52

   76 exp: MINUS . exp

    NUMBER     desplazar e ir al estado 44
    STRING     desplazar e ir al estado 45
    BOOL       desplazar e ir al estado 46
    VARIABLE   desplazar e ir al estado 47
    CONSTANT   desplazar e ir al estado 48
    BUILTIN    desplazar e ir al estado 49
    NOT        desplazar e ir al estado 50
    PLUS       desplazar e ir al estado 51
    MINUS      desplazar e ir al estado 52
    LPAREN     desplazar e ir al estado 53
    INCREMENT  desplazar e ir al estado 54
    DECREMENT  desplazar e ir al estado 55

    exp  ir al estado 91


State 53

   74 exp: LPAREN . exp RPAREN

    NUMBER     desplazar e ir al estado 44
    STRING     desplazar e ir al estado 45
    BOOL       desplazar e ir al estado 46
    VARIABLE   desplazar e ir al estado 47
    CONSTANT   desplazar e ir al estado 48
    BUILTIN    desplazar e ir al estado 49
    NOT        desplazar e ir al estado 50
    PLUS       desplazar e ir al estado 51
    MINUS      desplazar e ir al estado 52
    LPAREN     desplazar e ir al estado 53
    INCREMENT  desplazar e ir al estado 54
    DECREMENT  desplazar e ir al estado 55

    exp  ir al estado 92


State 54

   70 exp: INCREMENT . VARIABLE

    VARIABLE  desplazar e ir al estado 93


State 55

   71 exp: DECREMENT . VARIABLE

    VARIABLE  desplazar e ir al estado 94


State 56

   51 print: PRINT exp .
   66 exp: exp . PLUS exp
   67    | exp . MINUS exp
   72    | exp . MULTIPLICATION exp
   73    | exp . DIVISION exp
   77    | exp . MODULO exp
   78    | exp . POWER exp
   82    | exp . GREATER_THAN exp
   83    | exp . GREATER_OR_EQUAL exp
   84    | exp . LESS_THAN exp
   85    | exp . LESS_OR_EQUAL exp
   86    | exp . EQUAL exp
   87    | exp . NOT_EQUAL exp
   88    | exp . AND exp
   89    | exp . OR exp
   91    | exp . CONCATENATION exp

    OR                desplazar e ir al estado 95
    AND               desplazar e ir al estado 96
    GREATER_OR_EQUAL  desplazar e ir al estado 97
    LESS_OR_EQUAL     desplazar e ir al estado 98
    GREATER_THAN      desplazar e ir al estado 99
    LESS_THAN         desplazar e ir al estado 100
    EQUAL             desplazar e ir al estado 101
    NOT_EQUAL         desplazar e ir al estado 102
    PLUS              desplazar e ir al estado 103
    MINUS             desplazar e ir al estado 104
    CONCATENATION     desplazar e ir al estado 105
    MULTIPLICATION    desplazar e ir al estado 106
    DIVISION          desplazar e ir al estado 107
    MODULO            desplazar e ir al estado 108
    POWER             desplazar e ir al estado 109

    $default  reduce usando la regla 51 (print)


State 57

   52 print_string: PRINT_STRING exp .
   66 exp: exp . PLUS exp
   67    | exp . MINUS exp
   72    | exp . MULTIPLICATION exp
   73    | exp . DIVISION exp
   77    | exp . MODULO exp
   78    | exp . POWER exp
   82    | exp . GREATER_THAN exp
   83    | exp . GREATER_OR_EQUAL exp
   84    | exp . LESS_THAN exp
   85    | exp . LESS_OR_EQUAL exp
   86    | exp . EQUAL exp
   87    | exp . NOT_EQUAL exp
   88    | exp . AND exp
   89    | exp . OR exp
   91    | exp . CONCATENATION exp

    OR                desplazar e ir al estado 95
    AND               desplazar e ir al estado 96
    GREATER_OR_EQUAL  desplazar e ir al estado 97
    LESS_OR_EQUAL     desplazar e ir al estado 98
    GREATER_THAN      desplazar e ir al estado 99
    LESS_THAN         desplazar e ir al estado 100
    EQUAL             desplazar e ir al estado 101
    NOT_EQUAL         desplazar e ir al estado 102
    PLUS              desplazar e ir al estado 103
    MINUS             desplazar e ir al estado 104
    CONCATENATION     desplazar e ir al estado 105
    MULTIPLICATION    desplazar e ir al estado 106
    DIVISION          desplazar e ir al estado 107
    MODULO            desplazar e ir al estado 108
    POWER             desplazar e ir al estado 109

    $default  reduce usando la regla 52 (print_string)


State 58

   54 print_array: PRINT_ARRAY VARIABLE .

    $default  reduce usando la regla 54 (print_array)


State 59

   53 print_array: PRINT_ARRAY LPAREN . VARIABLE RPAREN

    VARIABLE  desplazar e ir al estado 110


State 60

   55 read: READ LPAREN . VARIABLE RPAREN
   56     | READ LPAREN . CONSTANT RPAREN

    VARIABLE  desplazar e ir al estado 111
    CONSTANT  desplazar e ir al estado 112


State 61

   57 read_string: READ_STRING LPAREN . VARIABLE RPAREN
   58            | READ_STRING LPAREN . CONSTANT RPAREN

    VARIABLE  desplazar e ir al estado 113
    CONSTANT  desplazar e ir al estado 114


State 62

   38 if: IF controlSymbol . cond THEN stmtlist END_IF
   39   | IF controlSymbol . cond THEN stmtlist ELSE stmtlist END_IF

    LPAREN  desplazar e ir al estado 115

    cond  ir al estado 116


State 63

   40 while: WHILE controlSymbol . cond DO stmtlist END_WHILE

    LPAREN  desplazar e ir al estado 115

    cond  ir al estado 117


State 64

   42 for: FOR controlSymbol . VARIABLE SINCE exp UNTIL exp DO stmtlist END_FOR
   43    | FOR controlSymbol . VARIABLE SINCE exp UNTIL exp STEP exp DO stmtlist END_FOR

    VARIABLE  desplazar e ir al estado 118


State 65

   41 repeat: REPEAT controlSymbol . stmtlist UNTIL cond SEMICOLON

    $default  reduce usando la regla 2 (stmtlist)

    stmtlist  ir al estado 119


State 66

   59 type_of: TYPE_OF LPAREN . exp RPAREN

    NUMBER     desplazar e ir al estado 44
    STRING     desplazar e ir al estado 45
    BOOL       desplazar e ir al estado 46
    VARIABLE   desplazar e ir al estado 47
    CONSTANT   desplazar e ir al estado 48
    BUILTIN    desplazar e ir al estado 49
    NOT        desplazar e ir al estado 50
    PLUS       desplazar e ir al estado 51
    MINUS      desplazar e ir al estado 52
    LPAREN     desplazar e ir al estado 53
    INCREMENT  desplazar e ir al estado 54
    DECREMENT  desplazar e ir al estado 55

    exp  ir al estado 120


State 67

   28 switch: SWITCH controlSymbol . LPAREN exp RPAREN caselist END_SWITCH
   29       | SWITCH controlSymbol . LPAREN exp RPAREN caselist defaultcase END_SWITCH

    LPAREN  desplazar e ir al estado 121


State 68

   62 style: STYLE LPAREN . exp RPAREN

    NUMBER     desplazar e ir al estado 44
    STRING     desplazar e ir al estado 45
    BOOL       desplazar e ir al estado 46
    VARIABLE   desplazar e ir al estado 47
    CONSTANT   desplazar e ir al estado 48
    BUILTIN    desplazar e ir al estado 49
    NOT        desplazar e ir al estado 50
    PLUS       desplazar e ir al estado 51
    MINUS      desplazar e ir al estado 52
    LPAREN     desplazar e ir al estado 53
    INCREMENT  desplazar e ir al estado 54
    DECREMENT  desplazar e ir al estado 55

    exp  ir al estado 122


State 69

   60 clear_screen: CLEAR_SCREEN_TOKEN LPAREN . RPAREN

    RPAREN  desplazar e ir al estado 123


State 70

   61 place: PLACE_TOKEN LPAREN . exp COMMA exp RPAREN

    NUMBER     desplazar e ir al estado 44
    STRING     desplazar e ir al estado 45
    BOOL       desplazar e ir al estado 46
    VARIABLE   desplazar e ir al estado 47
    CONSTANT   desplazar e ir al estado 48
    BUILTIN    desplazar e ir al estado 49
    NOT        desplazar e ir al estado 50
    PLUS       desplazar e ir al estado 51
    MINUS      desplazar e ir al estado 52
    LPAREN     desplazar e ir al estado 53
    INCREMENT  desplazar e ir al estado 54
    DECREMENT  desplazar e ir al estado 55

    exp  ir al estado 124


State 71

    3 stmtlist: stmtlist . stmt
    4         | stmtlist . error
   36 block: LETFCURLYBRACKET stmtlist . RIGHTCURLYBRACKET

    error               desplazar e ir al estado 4
    SEMICOLON           desplazar e ir al estado 5
    PRINT               desplazar e ir al estado 6
    PRINT_STRING        desplazar e ir al estado 7
    PRINT_ARRAY         desplazar e ir al estado 8
    READ                desplazar e ir al estado 9
    READ_STRING         desplazar e ir al estado 10
    IF                  desplazar e ir al estado 11
    WHILE               desplazar e ir al estado 12
    FOR                 desplazar e ir al estado 13
    REPEAT              desplazar e ir al estado 14
    TYPE_OF             desplazar e ir al estado 15
    SWITCH              desplazar e ir al estado 16
    STYLE               desplazar e ir al estado 17
    CLEAR_SCREEN_TOKEN  desplazar e ir al estado 18
    PLACE_TOKEN         desplazar e ir al estado 19
    LETFCURLYBRACKET    desplazar e ir al estado 20
    RIGHTCURLYBRACKET   desplazar e ir al estado 125
    VARIABLE            desplazar e ir al estado 21
    CONSTANT            desplazar e ir al estado 22
    INCREMENT           desplazar e ir al estado 23
    DECREMENT           desplazar e ir al estado 24

    stmt          ir al estado 25
    inc           ir al estado 26
    switch        ir al estado 27
    block         ir al estado 28
    if            ir al estado 29
    while         ir al estado 30
    repeat        ir al estado 31
    for           ir al estado 32
    asgn          ir al estado 33
    print         ir al estado 34
    print_string  ir al estado 35
    print_array   ir al estado 36
    read          ir al estado 37
    read_string   ir al estado 38
    type_of       ir al estado 39
    clear_screen  ir al estado 40
    place         ir al estado 41
    style         ir al estado 42
    create_array  ir al estado 43


State 72

   45 asgn: VARIABLE ASSIGNMENT . exp
   46     | VARIABLE ASSIGNMENT . asgn
   98 create_array: VARIABLE ASSIGNMENT . LBRACKET NUMBER RBRACKET
   99             | VARIABLE ASSIGNMENT . LBRACKET VARIABLE RBRACKET

    NUMBER     desplazar e ir al estado 44
    STRING     desplazar e ir al estado 45
    BOOL       desplazar e ir al estado 46
    VARIABLE   desplazar e ir al estado 126
    CONSTANT   desplazar e ir al estado 127
    BUILTIN    desplazar e ir al estado 49
    NOT        desplazar e ir al estado 50
    PLUS       desplazar e ir al estado 51
    MINUS      desplazar e ir al estado 52
    LPAREN     desplazar e ir al estado 53
    LBRACKET   desplazar e ir al estado 128
    INCREMENT  desplazar e ir al estado 54
    DECREMENT  desplazar e ir al estado 55

    asgn  ir al estado 129
    exp   ir al estado 130


State 73

   49 asgn: VARIABLE LBRACKET . NUMBER RBRACKET ASSIGNMENT exp
   50     | VARIABLE LBRACKET . VARIABLE RBRACKET ASSIGNMENT exp

    NUMBER    desplazar e ir al estado 131
    VARIABLE  desplazar e ir al estado 132


State 74

   24 inc: VARIABLE INCREMENT .

    $default  reduce usando la regla 24 (inc)


State 75

   25 inc: VARIABLE DECREMENT .

    $default  reduce usando la regla 25 (inc)


State 76

   47 asgn: CONSTANT ASSIGNMENT . exp
   48     | CONSTANT ASSIGNMENT . asgn

    NUMBER     desplazar e ir al estado 44
    STRING     desplazar e ir al estado 45
    BOOL       desplazar e ir al estado 46
    VARIABLE   desplazar e ir al estado 126
    CONSTANT   desplazar e ir al estado 127
    BUILTIN    desplazar e ir al estado 49
    NOT        desplazar e ir al estado 50
    PLUS       desplazar e ir al estado 51
    MINUS      desplazar e ir al estado 52
    LPAREN     desplazar e ir al estado 53
    INCREMENT  desplazar e ir al estado 54
    DECREMENT  desplazar e ir al estado 55

    asgn  ir al estado 133
    exp   ir al estado 134


State 77

   26 inc: INCREMENT VARIABLE .

    $default  reduce usando la regla 26 (inc)


State 78

   27 inc: DECREMENT VARIABLE .

    $default  reduce usando la regla 27 (inc)


State 79

    6 stmt: asgn SEMICOLON .

    $default  reduce usando la regla 6 (stmt)


State 80

    7 stmt: print SEMICOLON .

    $default  reduce usando la regla 7 (stmt)


State 81

   10 stmt: print_string SEMICOLON .

    $default  reduce usando la regla 10 (stmt)


State 82

   11 stmt: print_array SEMICOLON .

    $default  reduce usando la regla 11 (stmt)


State 83

    8 stmt: read SEMICOLON .

    $default  reduce usando la regla 8 (stmt)


State 84

    9 stmt: read_string SEMICOLON .

    $default  reduce usando la regla 9 (stmt)


State 85

   92 exp: VARIABLE LBRACKET . NUMBER RBRACKET
   93    | VARIABLE LBRACKET . VARIABLE RBRACKET

    NUMBER    desplazar e ir al estado 135
    VARIABLE  desplazar e ir al estado 136


State 86

   68 exp: VARIABLE INCREMENT .

    $default  reduce usando la regla 68 (exp)


State 87

   69 exp: VARIABLE DECREMENT .

    $default  reduce usando la regla 69 (exp)


State 88

   81 exp: BUILTIN LPAREN . listOfExp RPAREN

    NUMBER     desplazar e ir al estado 44
    STRING     desplazar e ir al estado 45
    BOOL       desplazar e ir al estado 46
    VARIABLE   desplazar e ir al estado 47
    CONSTANT   desplazar e ir al estado 48
    BUILTIN    desplazar e ir al estado 49
    NOT        desplazar e ir al estado 50
    PLUS       desplazar e ir al estado 51
    MINUS      desplazar e ir al estado 52
    LPAREN     desplazar e ir al estado 53
    INCREMENT  desplazar e ir al estado 54
    DECREMENT  desplazar e ir al estado 55
